--- a/showcaseproject/static/style.css
+++ b/showcaseproject/static/style.css
@@ -304,7 +304,10 @@ body{
     grid-area: item5;
     display:grid;
     grid-template-areas:'item5-container1 ''item5-container1' ;
-    background-image: linear-gradient(rgb(78, 78, 78),rgb(124, 124, 124));
+    background:url('/static/img/bkg_spot.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     text-align:center; 
 }
 #item5-text1{
